CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
PROJECT(tokyo CXX)

SET(TOKYO_CXX_STANDARD 23)

SET(CMAKE_CXX_STANDARD ${TOKYO_CXX_STANDARD})
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
OPTION(CMAKE_COMPILE_WARNING_AS_ERROR "Compile warnings as errors" ON)
OPTION(TOKYO_STRICT "Enable strict compile options" ON)

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")


SET(CMAKE_DEBUG_POSTFIX "-d")
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
	add_definitions(-DTOKYO_DEBUG)
endif()

if (CMAKE_VERSION VERSION_GREATER_EQUAL 3.19)
  CMAKE_POLICY(SET CMP0110 NEW)
endif()

ADD_SUBDIRECTORY(thirdparty)
ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(app)
ENABLE_TESTING()
ADD_SUBDIRECTORY(test)