FUNCTION(tokyoApplication AppMain CPP_NAME MODULE_LIBS)
	ADD_EXECUTABLE(${AppMain} ${CPP_NAME})
	SET_PROPERTY(TARGET ${AppMain} PROPERTY CXX_STANDARD ${TOKYO_CXX_STANDARD})
	SET_PROPERTY(TARGET ${AppMain} PROPERTY CXX_STANDARD_REQUIRED ON)

	FOREACH(library IN LISTS MODULE_LIBS)
		TARGET_LINK_LIBRARIES(${AppMain} PRIVATE ${library})
	ENDFOREACH()

ENDFUNCTION()

ADD_SUBDIRECTORY(Driller)
ADD_SUBDIRECTORY(Sokoban)
ADD_SUBDIRECTORY(Tower)